// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom Functions can use CONTAINS array function 1`] = `
Array [
  Object {
    "operation": "begin",
    "rule": undefined,
  },
  Object {
    "key": "cities",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 1,
    "stepRow": 0,
    "value": Array [
      "Denver",
      "London",
      "LA",
    ],
  },
  Object {
    "lhs": "hasLondon",
    "operation": "evalRule",
    "previous": undefined,
    "result": "{\\"cities\\":[\\"Denver\\",\\"London\\",\\"LA\\"],\\"onlyUSA\\":true,\\"hasLondon\\":true}",
    "rule": "hasLondon = CONTAINS(\\"London\\", cities)",
    "stepCount": 1,
    "stepRow": 0,
    "value": true,
  },
  Object {
    "input": "{\\"cities\\":[\\"Denver\\",\\"London\\",\\"LA\\"],\\"onlyUSA\\":true,\\"hasLondon\\":true}",
    "operation": "ruleString",
    "result": "{\\"cities\\":[\\"Denver\\",\\"London\\",\\"LA\\"],\\"onlyUSA\\":true,\\"hasLondon\\":true}",
    "rule": "hasLondon = CONTAINS(\\"London\\", cities)",
    "stepCount": 1,
    "stepRow": 0,
  },
  Object {
    "input": "{\\"cities\\":[\\"Denver\\",\\"London\\",\\"LA\\"],\\"onlyUSA\\":true,\\"hasLondon\\":true}",
    "operation": "complete",
    "returnValue": "{\\"cities\\":[\\"Denver\\",\\"London\\",\\"LA\\"],\\"onlyUSA\\":true,\\"hasLondon\\":true}",
    "rule": undefined,
    "stepCount": 1,
    "stepRow": 1,
  },
]
`;

exports[`Custom Functions can use functional array helpers 1`] = `
Array [
  Object {
    "operation": "begin",
    "rule": undefined,
  },
  Object {
    "key": "cities",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 1,
    "stepRow": 0,
    "value": Array [
      "Denver",
      "London",
      "LA",
    ],
  },
  Object {
    "lhs": "availableCities",
    "operation": "evalRule",
    "previous": undefined,
    "result": "{\\"cities\\":[\\"Denver\\",\\"London\\",\\"LA\\"],\\"onlyUSA\\":true,\\"availableCities\\":[\\"Denver\\",\\"LA\\"]}",
    "rule": "availableCities = FILTER_VALUES([\\"London\\", \\"Milan\\"], cities)",
    "stepCount": 1,
    "stepRow": 0,
    "value": Array [
      "Denver",
      "LA",
    ],
  },
  Object {
    "input": "{\\"cities\\":[\\"Denver\\",\\"London\\",\\"LA\\"],\\"onlyUSA\\":true,\\"availableCities\\":[\\"Denver\\",\\"LA\\"]}",
    "operation": "ruleString",
    "result": "{\\"cities\\":[\\"Denver\\",\\"London\\",\\"LA\\"],\\"onlyUSA\\":true,\\"availableCities\\":[\\"Denver\\",\\"LA\\"]}",
    "rule": "availableCities = FILTER_VALUES([\\"London\\", \\"Milan\\"], cities)",
    "stepCount": 1,
    "stepRow": 0,
  },
  Object {
    "key": "availableCities",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 2,
    "stepRow": 1,
    "value": Array [
      "Denver",
      "LA",
    ],
  },
  Object {
    "operation": "expression",
    "result": Array [
      "Denver",
      "LA",
    ],
    "rule": "availableCities",
    "stepCount": 2,
    "stepRow": 1,
  },
  Object {
    "input": "{\\"cities\\":[\\"Denver\\",\\"London\\",\\"LA\\"],\\"onlyUSA\\":true,\\"availableCities\\":[\\"Denver\\",\\"LA\\"]}",
    "operation": "return",
    "result": "[\\"Denver\\",\\"LA\\"]",
    "rule": "availableCities",
    "stepCount": 2,
    "stepRow": 1,
  },
  Object {
    "input": "{\\"cities\\":[\\"Denver\\",\\"London\\",\\"LA\\"],\\"onlyUSA\\":true,\\"availableCities\\":[\\"Denver\\",\\"LA\\"]}",
    "operation": "complete",
    "returnValue": "[\\"Denver\\",\\"LA\\"]",
    "rule": undefined,
    "stepCount": 2,
    "stepRow": 1,
  },
]
`;

exports[`Custom Functions can use functions as expressions 1`] = `"2020-01-20T00:10:00.000Z"`;

exports[`Logical and/or can process 'and' rules 1`] = `
Array [
  Object {
    "operation": "begin",
    "rule": undefined,
  },
  Object {
    "key": "price",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 1,
    "stepRow": 0,
    "value": 35,
  },
  Object {
    "operation": "expression",
    "result": true,
    "rule": "price >= 25",
    "stepCount": 1,
    "stepRow": 0,
  },
  Object {
    "key": "price",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 2,
    "stepRow": 0,
    "value": 35,
  },
  Object {
    "operation": "expression",
    "result": true,
    "rule": "price <= 50",
    "stepCount": 2,
    "stepRow": 0,
  },
  Object {
    "input": "{\\"price\\":35}",
    "operation": "if.and",
    "result": true,
    "rule": Array [
      "price >= 25",
      "price <= 50",
    ],
    "stepCount": 2,
    "stepRow": 0,
  },
  Object {
    "lhs": "discount",
    "operation": "evalRule",
    "previous": undefined,
    "result": "{\\"price\\":35,\\"discount\\":5}",
    "rule": "discount = 5",
    "stepCount": 3,
    "stepRow": 0,
    "value": 5,
  },
  Object {
    "input": "{\\"price\\":35,\\"discount\\":5}",
    "operation": "if.then",
    "result": true,
    "rule": "discount = 5",
    "stepCount": 3,
    "stepRow": 0,
  },
  Object {
    "key": "price",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 4,
    "stepRow": 1,
    "value": 35,
  },
  Object {
    "operation": "expression",
    "result": false,
    "rule": "price >= 100",
    "stepCount": 4,
    "stepRow": 1,
  },
  Object {
    "input": "{\\"price\\":35,\\"discount\\":5}",
    "operation": "if",
    "result": false,
    "rule": "price >= 100",
    "stepCount": 4,
    "stepRow": 1,
  },
  Object {
    "key": "discount",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 5,
    "stepRow": 2,
    "value": 5,
  },
  Object {
    "operation": "expression",
    "result": 5,
    "rule": "discount",
    "stepCount": 5,
    "stepRow": 2,
  },
  Object {
    "input": "{\\"price\\":35,\\"discount\\":5}",
    "operation": "return",
    "result": 5,
    "rule": "discount",
    "stepCount": 5,
    "stepRow": 2,
  },
  Object {
    "input": "{\\"price\\":35,\\"discount\\":5}",
    "operation": "complete",
    "returnValue": 5,
    "rule": undefined,
    "stepCount": 5,
    "stepRow": 2,
  },
]
`;

exports[`Logical and/or can process 'or' rules 1`] = `
Array [
  Object {
    "operation": "begin",
    "rule": undefined,
  },
  Object {
    "key": "price",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 1,
    "stepRow": 0,
    "value": 35,
  },
  Object {
    "operation": "expression",
    "result": true,
    "rule": "price <= 100",
    "stepCount": 1,
    "stepRow": 0,
  },
  Object {
    "input": "{\\"price\\":35,\\"user\\":{\\"isAdmin\\":true}}",
    "operation": "if",
    "result": true,
    "rule": "price <= 100",
    "stepCount": 1,
    "stepRow": 0,
  },
  Object {
    "lhs": "discount",
    "operation": "evalRule",
    "previous": undefined,
    "result": "{\\"price\\":35,\\"user\\":{\\"isAdmin\\":true},\\"discount\\":5}",
    "rule": "discount = 5",
    "stepCount": 2,
    "stepRow": 0,
    "value": 5,
  },
  Object {
    "input": "{\\"price\\":35,\\"user\\":{\\"isAdmin\\":true},\\"discount\\":5}",
    "operation": "if.then",
    "result": true,
    "rule": "discount = 5",
    "stepCount": 2,
    "stepRow": 0,
  },
  Object {
    "key": "price",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 3,
    "stepRow": 1,
    "value": 35,
  },
  Object {
    "operation": "expression",
    "result": false,
    "rule": "price >= 100",
    "stepCount": 3,
    "stepRow": 1,
  },
  Object {
    "key": "user.isAdmin",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 4,
    "stepRow": 1,
    "value": true,
  },
  Object {
    "operation": "expression",
    "result": true,
    "rule": "user.isAdmin == true",
    "stepCount": 4,
    "stepRow": 1,
  },
  Object {
    "input": "{\\"price\\":35,\\"user\\":{\\"isAdmin\\":true},\\"discount\\":5}",
    "operation": "if.or",
    "result": true,
    "rule": Array [
      "price >= 100",
      "user.isAdmin == true",
    ],
    "stepCount": 4,
    "stepRow": 1,
  },
  Object {
    "lhs": "discount",
    "operation": "evalRule",
    "previous": 5,
    "result": "{\\"price\\":35,\\"user\\":{\\"isAdmin\\":true},\\"discount\\":20}",
    "rule": "discount = 20",
    "stepCount": 5,
    "stepRow": 1,
    "value": 20,
  },
  Object {
    "input": "{\\"price\\":35,\\"user\\":{\\"isAdmin\\":true},\\"discount\\":20}",
    "operation": "if.then",
    "result": true,
    "rule": "discount = 20",
    "stepCount": 5,
    "stepRow": 1,
  },
  Object {
    "key": "discount",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 6,
    "stepRow": 2,
    "value": 20,
  },
  Object {
    "operation": "expression",
    "result": 20,
    "rule": "discount",
    "stepCount": 6,
    "stepRow": 2,
  },
  Object {
    "input": "{\\"price\\":35,\\"user\\":{\\"isAdmin\\":true},\\"discount\\":20}",
    "operation": "return",
    "result": 20,
    "rule": "discount",
    "stepCount": 6,
    "stepRow": 2,
  },
  Object {
    "input": "{\\"price\\":35,\\"user\\":{\\"isAdmin\\":true},\\"discount\\":20}",
    "operation": "complete",
    "returnValue": 20,
    "rule": undefined,
    "stepCount": 6,
    "stepRow": 2,
  },
]
`;

exports[`Logical and/or can process nested logical rule arrays 1`] = `
Array [
  Object {
    "operation": "begin",
    "rule": undefined,
  },
  Object {
    "key": "price",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 1,
    "stepRow": 0,
    "value": 90,
  },
  Object {
    "operation": "expression",
    "result": true,
    "rule": "price <= 100",
    "stepCount": 1,
    "stepRow": 0,
  },
  Object {
    "input": "{\\"price\\":90,\\"user\\":{\\"isAdmin\\":true}}",
    "operation": "if",
    "result": true,
    "rule": "price <= 100",
    "stepCount": 1,
    "stepRow": 0,
  },
  Object {
    "lhs": "discount",
    "operation": "evalRule",
    "previous": undefined,
    "result": "{\\"price\\":90,\\"user\\":{\\"isAdmin\\":true},\\"discount\\":5}",
    "rule": "discount = 5",
    "stepCount": 2,
    "stepRow": 0,
    "value": 5,
  },
  Object {
    "lhs": "user.discountApplied",
    "operation": "evalRule",
    "previous": undefined,
    "result": "{\\"price\\":90,\\"user\\":{\\"isAdmin\\":true,\\"discountApplied\\":true},\\"discount\\":5}",
    "rule": "user.discountApplied = true",
    "stepCount": 3,
    "stepRow": 0,
    "value": true,
  },
  Object {
    "input": "{\\"price\\":90,\\"user\\":{\\"isAdmin\\":true,\\"discountApplied\\":true},\\"discount\\":5}",
    "operation": "if.then",
    "result": true,
    "rule": Array [
      "discount = 5",
      "user.discountApplied = true",
    ],
    "stepCount": 3,
    "stepRow": 0,
  },
  Object {
    "key": "price",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 4,
    "stepRow": 1,
    "value": 90,
  },
  Object {
    "operation": "expression",
    "result": true,
    "rule": "price >= 90",
    "stepCount": 4,
    "stepRow": 1,
  },
  Object {
    "key": "user.discountApplied",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 5,
    "stepRow": 1,
    "value": true,
  },
  Object {
    "operation": "expression",
    "result": false,
    "rule": "user.discountApplied != true",
    "stepCount": 5,
    "stepRow": 1,
  },
  Object {
    "input": "{\\"price\\":90,\\"user\\":{\\"isAdmin\\":true,\\"discountApplied\\":true},\\"discount\\":5}",
    "operation": "if.and",
    "result": false,
    "rule": Array [
      "price >= 90",
      "user.discountApplied != true",
    ],
    "stepCount": 5,
    "stepRow": 1,
  },
  Object {
    "key": "discount",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 6,
    "stepRow": 2,
    "value": 5,
  },
  Object {
    "operation": "expression",
    "result": 5,
    "rule": "discount",
    "stepCount": 6,
    "stepRow": 2,
  },
  Object {
    "input": "{\\"price\\":90,\\"user\\":{\\"isAdmin\\":true,\\"discountApplied\\":true},\\"discount\\":5}",
    "operation": "return",
    "result": 5,
    "rule": "discount",
    "stepCount": 6,
    "stepRow": 2,
  },
  Object {
    "input": "{\\"price\\":90,\\"user\\":{\\"isAdmin\\":true,\\"discountApplied\\":true},\\"discount\\":5}",
    "operation": "complete",
    "returnValue": 5,
    "rule": undefined,
    "stepCount": 6,
    "stepRow": 2,
  },
]
`;

exports[`Logical if/then/else can process 'then' rules 1`] = `
Array [
  Object {
    "operation": "begin",
    "rule": undefined,
  },
  Object {
    "key": "price",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 1,
    "stepRow": 0,
    "value": 100,
  },
  Object {
    "operation": "expression",
    "result": true,
    "rule": "price >= 25",
    "stepCount": 1,
    "stepRow": 0,
  },
  Object {
    "input": "{\\"price\\":100}",
    "operation": "if",
    "result": true,
    "rule": "price >= 25",
    "stepCount": 1,
    "stepRow": 0,
  },
  Object {
    "lhs": "discount",
    "operation": "evalRule",
    "previous": undefined,
    "result": "{\\"price\\":100,\\"discount\\":5}",
    "rule": "discount = 5",
    "stepCount": 2,
    "stepRow": 0,
    "value": 5,
  },
  Object {
    "input": "{\\"price\\":100,\\"discount\\":5}",
    "operation": "if.then",
    "result": true,
    "rule": "discount = 5",
    "stepCount": 2,
    "stepRow": 0,
  },
  Object {
    "key": "price",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 3,
    "stepRow": 1,
    "value": 100,
  },
  Object {
    "operation": "expression",
    "result": true,
    "rule": "price >= 100",
    "stepCount": 3,
    "stepRow": 1,
  },
  Object {
    "input": "{\\"price\\":100,\\"discount\\":5}",
    "operation": "if",
    "result": true,
    "rule": "price >= 100",
    "stepCount": 3,
    "stepRow": 1,
  },
  Object {
    "lhs": "discount",
    "operation": "evalRule",
    "previous": 5,
    "result": "{\\"price\\":100,\\"discount\\":20}",
    "rule": "discount = 20",
    "stepCount": 4,
    "stepRow": 1,
    "value": 20,
  },
  Object {
    "input": "{\\"price\\":100,\\"discount\\":20}",
    "operation": "if.then",
    "result": true,
    "rule": "discount = 20",
    "stepCount": 4,
    "stepRow": 1,
  },
  Object {
    "key": "discount",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 5,
    "stepRow": 2,
    "value": 20,
  },
  Object {
    "operation": "expression",
    "result": 20,
    "rule": "discount",
    "stepCount": 5,
    "stepRow": 2,
  },
  Object {
    "input": "{\\"price\\":100,\\"discount\\":20}",
    "operation": "return",
    "result": 20,
    "rule": "discount",
    "stepCount": 5,
    "stepRow": 2,
  },
  Object {
    "input": "{\\"price\\":100,\\"discount\\":20}",
    "operation": "complete",
    "returnValue": 20,
    "rule": undefined,
    "stepCount": 5,
    "stepRow": 2,
  },
]
`;

exports[`Logical if/then/else can process omitted 'else' rules 1`] = `
Array [
  Object {
    "operation": "begin",
    "rule": undefined,
  },
  Object {
    "key": "price",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 1,
    "stepRow": 0,
    "value": 10,
  },
  Object {
    "operation": "expression",
    "result": false,
    "rule": "price >= 100",
    "stepCount": 1,
    "stepRow": 0,
  },
  Object {
    "input": "{\\"price\\":10}",
    "operation": "if",
    "result": false,
    "rule": "price >= 100",
    "stepCount": 1,
    "stepRow": 0,
  },
  Object {
    "key": "discount",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 2,
    "stepRow": 1,
    "value": undefined,
  },
  Object {
    "operation": "expression",
    "result": undefined,
    "rule": "discount",
    "stepCount": 2,
    "stepRow": 1,
  },
  Object {
    "input": "{\\"price\\":10}",
    "operation": "return",
    "result": undefined,
    "rule": "discount",
    "stepCount": 2,
    "stepRow": 1,
  },
  Object {
    "input": "{\\"price\\":10}",
    "operation": "complete",
    "returnValue": undefined,
    "rule": undefined,
    "stepCount": 2,
    "stepRow": 1,
  },
]
`;

exports[`Logical if/then/else can process series of if/then rules 1`] = `
Array [
  Object {
    "operation": "begin",
    "rule": undefined,
  },
  Object {
    "key": "user.plan",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 1,
    "stepRow": 0,
    "value": "premium",
  },
  Object {
    "operation": "expression",
    "result": true,
    "rule": "user.plan == \\"premium\\"",
    "stepCount": 1,
    "stepRow": 0,
  },
  Object {
    "input": "{\\"user\\":{\\"plan\\":\\"premium\\",\\"employee\\":true},\\"config\\":{\\"maxDiscount\\":10},\\"shoppingCart\\":{\\"discount\\":1,\\"total\\":100}}",
    "operation": "if",
    "result": true,
    "rule": "user.plan == \\"premium\\"",
    "stepCount": 1,
    "stepRow": 0,
  },
  Object {
    "lhs": "discount",
    "operation": "evalRule",
    "previous": undefined,
    "result": "{\\"user\\":{\\"plan\\":\\"premium\\",\\"employee\\":true},\\"config\\":{\\"maxDiscount\\":10},\\"shoppingCart\\":{\\"discount\\":1,\\"total\\":100},\\"discount\\":15}",
    "rule": "discount = 15",
    "stepCount": 2,
    "stepRow": 0,
    "value": 15,
  },
  Object {
    "input": "{\\"user\\":{\\"plan\\":\\"premium\\",\\"employee\\":true},\\"config\\":{\\"maxDiscount\\":10},\\"shoppingCart\\":{\\"discount\\":1,\\"total\\":100},\\"discount\\":15}",
    "operation": "if.then",
    "result": true,
    "rule": "discount = 15",
    "stepCount": 2,
    "stepRow": 0,
  },
  Object {
    "key": "user.employee",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 3,
    "stepRow": 1,
    "value": true,
  },
  Object {
    "operation": "expression",
    "result": true,
    "rule": "user.employee == true",
    "stepCount": 3,
    "stepRow": 1,
  },
  Object {
    "input": "{\\"user\\":{\\"plan\\":\\"premium\\",\\"employee\\":true},\\"config\\":{\\"maxDiscount\\":10},\\"shoppingCart\\":{\\"discount\\":1,\\"total\\":100},\\"discount\\":15}",
    "operation": "if",
    "result": true,
    "rule": "user.employee == true",
    "stepCount": 3,
    "stepRow": 1,
  },
  Object {
    "lhs": "discount",
    "operation": "evalRule",
    "previous": 15,
    "result": "{\\"user\\":{\\"plan\\":\\"premium\\",\\"employee\\":true},\\"config\\":{\\"maxDiscount\\":10},\\"shoppingCart\\":{\\"discount\\":1,\\"total\\":100},\\"discount\\":15}",
    "rule": "discount = 15",
    "stepCount": 4,
    "stepRow": 1,
    "value": 15,
  },
  Object {
    "input": "{\\"user\\":{\\"plan\\":\\"premium\\",\\"employee\\":true},\\"config\\":{\\"maxDiscount\\":10},\\"shoppingCart\\":{\\"discount\\":1,\\"total\\":100},\\"discount\\":15}",
    "operation": "if.then",
    "result": true,
    "rule": "discount = 15",
    "stepCount": 4,
    "stepRow": 1,
  },
  Object {
    "key": "discount",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 5,
    "stepRow": 2,
    "value": 15,
  },
  Object {
    "operation": "expression",
    "result": 15,
    "rule": "discount",
    "stepCount": 5,
    "stepRow": 2,
  },
  Object {
    "input": "{\\"user\\":{\\"plan\\":\\"premium\\",\\"employee\\":true},\\"config\\":{\\"maxDiscount\\":10},\\"shoppingCart\\":{\\"discount\\":1,\\"total\\":100},\\"discount\\":15}",
    "operation": "return",
    "result": 15,
    "rule": "discount",
    "stepCount": 5,
    "stepRow": 2,
  },
  Object {
    "input": "{\\"user\\":{\\"plan\\":\\"premium\\",\\"employee\\":true},\\"config\\":{\\"maxDiscount\\":10},\\"shoppingCart\\":{\\"discount\\":1,\\"total\\":100},\\"discount\\":15}",
    "operation": "complete",
    "returnValue": 15,
    "rule": undefined,
    "stepCount": 5,
    "stepRow": 2,
  },
]
`;

exports[`Nested Rule Structures can process complex rule expressions 1`] = `
Array [
  Object {
    "operation": "begin",
    "rule": undefined,
  },
  Object {
    "key": "price",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 1,
    "stepRow": 0,
    "value": 100,
  },
  Object {
    "operation": "expression",
    "result": true,
    "rule": "price >= 25",
    "stepCount": 1,
    "stepRow": 0,
  },
  Object {
    "input": "{\\"price\\":100}",
    "operation": "if",
    "result": true,
    "rule": "price >= 25",
    "stepCount": 1,
    "stepRow": 0,
  },
  Object {
    "lhs": "discount",
    "operation": "evalRule",
    "previous": undefined,
    "result": "{\\"price\\":100,\\"discount\\":10}",
    "rule": "discount = 5 * 2",
    "stepCount": 2,
    "stepRow": 0,
    "value": 10,
  },
  Object {
    "input": "{\\"price\\":100,\\"discount\\":10}",
    "operation": "if.then",
    "result": true,
    "rule": "discount = 5 * 2",
    "stepCount": 2,
    "stepRow": 0,
  },
  Object {
    "key": "price",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 3,
    "stepRow": 1,
    "value": 100,
  },
  Object {
    "operation": "expression",
    "result": true,
    "rule": "price >= 100",
    "stepCount": 3,
    "stepRow": 1,
  },
  Object {
    "input": "{\\"price\\":100,\\"discount\\":10}",
    "operation": "if",
    "result": true,
    "rule": "price >= 100",
    "stepCount": 3,
    "stepRow": 1,
  },
  Object {
    "lhs": "discount",
    "operation": "evalRule",
    "previous": 10,
    "result": "{\\"price\\":100,\\"discount\\":80}",
    "rule": "discount = 20 * 4",
    "stepCount": 4,
    "stepRow": 1,
    "value": 80,
  },
  Object {
    "input": "{\\"price\\":100,\\"discount\\":80}",
    "operation": "if.then",
    "result": true,
    "rule": "discount = 20 * 4",
    "stepCount": 4,
    "stepRow": 1,
  },
  Object {
    "key": "discount",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 5,
    "stepRow": 2,
    "value": 80,
  },
  Object {
    "operation": "expression",
    "result": 80,
    "rule": "discount",
    "stepCount": 5,
    "stepRow": 2,
  },
  Object {
    "input": "{\\"price\\":100,\\"discount\\":80}",
    "operation": "return",
    "result": 80,
    "rule": "discount",
    "stepCount": 5,
    "stepRow": 2,
  },
  Object {
    "input": "{\\"price\\":100,\\"discount\\":80}",
    "operation": "complete",
    "returnValue": 80,
    "rule": undefined,
    "stepCount": 5,
    "stepRow": 2,
  },
]
`;
